sounds and alignment for buttons correct

--- a/src/App.css
+++ b/src/App.css
@@ -82,14 +82,19 @@ body {
    
  }
 
-.viewexp {
-color: black;
-width: 100%;
-margin-right: auto;
-margin-left: auto;
+#buttonwrap {
+  width: 100%;
 }
 
- #mobver {
+.viewexp {
+color: black;
+width: max-content;
+margin-right: auto;
+margin-left: auto;
+margin-top: 5px;
+}
+
+ #mobileid {
 border: solid 4px rgb(64, 91, 116);
 background-color: rgb(255, 255, 255);
 font-family: 'Noto Sans TC', sans-serif;
@@ -118,28 +123,24 @@ margin-bottom: auto;
   color: aqua;
   width: 100%;
   margin: 0px;
+  margin-left: auto;
+  margin-right: auto;
  }
 
  #modernid {
-border-left: 3px black solid;
-border-bottom: 3px black solid;
-border-right: 3px black solid;
-border-top: none;
-border-radius: 10%;
+border: solid 2px black;
+margin-top: 5px;
+border-radius: 25px;
 background-repeat: round;
 opacity: .9;
-color: rgb(28, 88, 0);
-font-weight: 900;
-background-color: rgb(255, 253, 220);
+color: rgb(255, 255, 255);
+font-weight: 1100;
+background-color:rgb(0, 85, 241);
 font-family: 'Noto Sans TC', sans-serif;
-height: 30px;
-font-size: large;
- }
-
- #modernid {
-  background-color: rgb(0, 0, 0);
-  border-radius: 15%;
-  margin-top: 4%;
+height: 100%;
+font-size: small;
+margin-left: auto;
+margin-right: auto; 
 }
  
  #classicid {
